# ttml2srt

./: .gitignore  CMakeLists.txt  Makefile.am  README  args.c  args.h  compat.c  compat.h  configure.ac  main.c  process.c  process.h  ttml2srt.c  ttml2srt.h
compat/: CMakeLists.txt  compat.h  snprintf.c  strcasecmp.c  strptime.c  vsnprintf.c
